--- a/css/teatro.css
+++ b/css/teatro.css
@@ -60,7 +60,7 @@ h1#slider-text {
 section#content {
     width: 100%;
     height: 100%;
-    background-color: #f0f0f0;
+    background-color: #ffffff;
 }
 
 div.text-slider {
@@ -223,4 +223,50 @@ div.text-slider {
         height: 100%;
         opacity: .9;
     }
+}
+
+.contenedor-img {
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    float: right;
+}
+.contenido h1 {
+    color: #06546b;
+}
+
+.contenido h2 {
+    font-weight: bold 100;
+    font-size: 20px;
+    color: rgba(0, 0, 0, 0.404);
+}
+
+.contenido p {
+    width: 100%;
+    font-weight: 300;
+}
+
+.contenido h3 {
+    font-size: 20px;
+    font-weight: bold 100;
+    color: #06546b;
+}
+
+.contenido strong {
+    color: rgba(0, 0, 0, 0.664);
+    font-size: 15px;
+}
+
+.contenido img {
+    width: 10em;
+   
+    float: right;
+    border-radius: 100px;
+    cursor: pointer;
+    border: solid 7px #06546b5d;
+    transition: all 500ms;
+}
+.contenido img:hover{
+    transform: translateY(8px);
+    border: solid 7px #06546b;
 }
